--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@nomiclabs/buidler-truffle5": "^1.0.2",
     "@nomiclabs/buidler-web3": "^1.0.2",
     "@openzeppelin/contracts": "^2.4.0",
+    "@openzeppelin/test-helpers": "^0.5.4",
     "buidler-gas-reporter": "^0.1.3",
     "eslint": "^6.6.0",
     "eslint-plugin-vue": "^6.0.0",
