--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.0.2",
-    "@nomiclabs/buidler-truffle5": "^1.0.2",
-    "@nomiclabs/buidler-web3": "^1.0.2",
-    "@openzeppelin/contracts": "^2.4.0",
+    "@nomiclabs/buidler": "^1.2.0",
+    "@nomiclabs/buidler-truffle5": "^1.2.0",
+    "@nomiclabs/buidler-web3": "^1.2.0",
+    "@openzeppelin/contracts": "3.0.0-beta.0",
     "@openzeppelin/test-helpers": "^0.5.4",
     "buidler-gas-reporter": "^0.1.3",
     "eslint": "^6.6.0",
-    "eslint-plugin-vue": "^6.0.0",
-    "ganache-cli": "^6.8.1",
+    "ganache-cli": "^6.9.1",
     "solidity-coverage": "^0.7.2"
   }
 }
