--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.2.0",
-    "@nomiclabs/buidler-truffle5": "^1.2.0",
-    "@nomiclabs/buidler-web3": "^1.2.0",
-    "@openzeppelin/contracts": "3.0.0-beta.0",
-    "@openzeppelin/test-helpers": "^0.5.4",
+    "@nomiclabs/buidler": "^1.3.1",
+    "@nomiclabs/buidler-truffle5": "^1.3.1",
+    "@nomiclabs/buidler-web3": "^1.3.1",
+    "@openzeppelin/contracts": "^3.0.1",
+    "@openzeppelin/test-helpers": "^0.5.5",
     "buidler-gas-reporter": "^0.1.3",
     "eslint": "^6.6.0",
     "ganache-cli": "^6.9.1",
