--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.3.1",
-    "@nomiclabs/buidler-truffle5": "^1.3.1",
-    "@nomiclabs/buidler-web3": "^1.3.1",
+    "@nomiclabs/buidler": "^1.3.4",
+    "@nomiclabs/buidler-truffle5": "^1.3.3",
+    "@nomiclabs/buidler-web3": "^1.3.3",
     "@openzeppelin/contracts": "^3.0.1",
     "@openzeppelin/test-helpers": "^0.5.5",
     "buidler-gas-reporter": "^0.1.3",
+    "buidler-spdx-license-identifier": "^1.0.1",
     "eslint": "^6.6.0",
     "ganache-cli": "^6.9.1",
     "solidity-coverage": "^0.7.2"
