--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "url": "git+https://github.com/ItsNickBarry/buidler-web3-template.git"
   },
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.3.6",
+    "@nomiclabs/buidler": "^1.4.7",
     "@nomiclabs/buidler-truffle5": "^1.3.4",
     "@nomiclabs/buidler-web3": "^1.3.4",
-    "@openzeppelin/contracts": "^3.0.2",
+    "@openzeppelin/contracts": "3.2.0-solc-0.7",
     "@openzeppelin/test-helpers": "^0.5.6",
     "buidler-gas-reporter": "^0.1.3",
-    "buidler-spdx-license-identifier": "^1.0.1",
-    "eslint": "^7.2.0",
-    "ganache-cli": "^6.9.1",
-    "solidity-coverage": "^0.7.7"
+    "buidler-spdx-license-identifier": "^1.0.4",
+    "eslint": "^7.10.0",
+    "ganache-cli": "^6.11.0",
+    "solidity-coverage": "^0.7.10"
   }
 }
